<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acquire_wake_lock">Acquire WakeLock</string>
    <string name="action_anytls">AnyTLS</string>
    <string name="action_camera_switch">Switch camera</string>
    <string name="action_export">Export</string>
    <string name="action_export_clipboard">Export to Clipboard</string>
    <string name="action_export_err">Failed to export.</string>
    <string name="action_export_file">Export to file</string>
    <string name="action_export_msg">Successfully export!</string>
    <string name="action_flash_off">Turn off flash</string>
    <string name="action_flash_on">Turn on flash</string>
    <string name="action_http">HTTP</string>
    <string name="action_http3">HTTP/3</string>
    <string name="action_hysteria2">Hysteria 2</string>
    <string name="action_import">Import from clipboard</string>
    <string name="action_import_err">Failed to import.</string>
    <string name="action_import_file">Import from file</string>
    <string name="action_import_msg">Successfully import!</string>
    <string name="action_juicity">Juicity</string>
    <string name="action_mieru">mieru</string>
    <string name="action_naive">NaïveProxy</string>
    <string name="action_open">Open</string>
    <string name="action_shadowquic">ShadowQUIC</string>
    <string name="action_shadowsocks">Shadowsocks</string>
    <string name="action_shadowsocksr">ShadowsocksR</string>
    <string name="action_shadowtls">ShadowTLS</string>
    <string name="action_socks">SOCKS</string>
    <string name="action_ssh">SSH</string>
    <string name="action_switch">Switch</string>
    <string name="action_trojan">Trojan</string>
    <string name="action_tuic5">TUIC</string>
    <string name="action_vless">VLESS</string>
    <string name="action_vmess">VMess</string>
    <string name="action_wireguard">WireGuard</string>
    <string name="add_profile">Add profile</string>
    <string name="add_profile_methods_manual_settings">Manual settings</string>
    <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
    <string name="allow_access">Allow connections from LAN</string>
    <string name="allow_access_sum">Bind inbounds to 0.0.0.0</string>
    <string name="allow_apps_bypass_vpn">Allow apps to bypass VPN</string>
    <string name="allow_apps_bypass_vpn_sum">Allow apps to bypass VPN using system-provided methods on their own</string>
    <string name="allow_insecure">Skip certificate verification</string>
    <string name="allow_insecure_sum">Enabling this option without deploying other security measures leads to the success of man-in-the-middle attacks. Do NOT enable unless you know what you are doing.</string>
    <string name="alpn">ALPN</string>
    <string name="alter_id">Alter ID</string>
    <string name="always_show_address">Always show address</string>
    <string name="always_show_address_sum">Always display the server address on the configuration card</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anytls_idle_session_check_interval">Idle session check interval (s)</string>
    <string name="anytls_idle_session_timeout">Idle session timeout (s)</string>
    <string name="anytls_min_idle_session">Minimal idle sessions</string>
    <string name="app_name">Exclave</string>
    <string name="app_no_launcher">The app has no interface.</string>
    <string name="app_statistics_disabled">App traffic statistics disabled</string>
    <string name="app_traffic_statistics">App traffic statistics</string>
    <string name="app_version">Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append_http_proxy">Append HTTP proxy to VPN</string>
    <string name="append_http_proxy_sum">Some supported apps will use HTTP proxy directly and their traffic will not go through the VPN interface.</string>
    <string name="apply">Apply</string>
    <string name="apps">Applications</string>
    <string name="auto">Auto</string>
    <string name="auto_connect">Auto connect</string>
    <string name="auto_connect_summary">Restore the previous connection status after device boot or app update</string>
    <string name="auto_update">Automatic update</string>
    <string name="auto_update_delay">Automatic update interval (minutes)</string>
    <string name="available">%d ms</string>
    <string name="backup">Backup</string>
    <string name="backup_all_profiles">Backup all profiles</string>
    <string name="backup_groups_and_configurations">Groups and configurations</string>
    <string name="backup_import">Import</string>
    <string name="backup_import_summary">Importing will overwrite existing data.</string>
    <string name="backup_importing">Importing…</string>
    <string name="backup_not_file">Not a backup file: excepted .json, but %s</string>
    <string name="backup_rules">Routing rules</string>
    <string name="backup_settings">Settings</string>
    <string name="backup_summary">If routing rules are not backed up with the configurations, custom outbounds will be lost. No backward or forward compatibility guaranteed.</string>
    <string name="balancer">Balancer</string>
    <string name="balancer_settings">Balancer settings</string>
    <string name="balancer_strategy">Strategy</string>
    <string name="balancer_type">Type</string>
    <string name="bootstrap_dns">Bootstrap DNS</string>
    <string name="bootstrap_dns_sum">If the address of direct DNS is a domain name and resolve destination is enabled, use bootstrap DNS to resolve it. Please input a DNS server with IP address or with +local.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brook_fragment">Fragment</string>
    <string name="brook_udp_over_stream">UDP over stream</string>
    <string name="browser_forwarder_hint">Please download v2ray-extra.zip from v2ray-core release and place index.html and index.js in Android/data/%s/files or import index.html and index.js as route assets.</string>
    <string name="bypass_apps">Bypass</string>
    <string name="bypass_private_sum">Exclude private addresses from VPN</string>
    <string name="cag_dns">DNS settings</string>
    <string name="cag_grpc">gRPC settings</string>
    <string name="cag_httpupgrade">HTTPUpgrade settings</string>
    <string name="cag_misc">Misc settings</string>
    <string name="cag_route">Route settings</string>
    <string name="cag_splithttp">XHTTP settings</string>
    <string name="cag_ws">WebSocket settings</string>
    <string name="certificates">Certificate</string>
    <string name="chain_settings">Chain settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="circular_reference">Circular reference</string>
    <string name="circular_reference_sum">Route cannot contain itself.</string>
    <string name="clear_logcat">Clear Logcat</string>
    <string name="clear_profiles">Clear</string>
    <string name="clear_profiles_message">Are you sure you want to clear this group?</string>
    <string name="clear_selections">Clear selections</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clear_traffic_statistics">Clear traffic statistics</string>
    <string name="cleartext_http_warning">Cleartext HTTP traffic is insecure</string>
    <string name="clipboard_empty">Clipboard is empty</string>
    <string name="color_swatch_description">Color %1$d</string>
    <string name="color_swatch_description_selected">Color %1$d selected</string>
    <string name="config_settings">Config settings</string>
    <string name="config_type">Config type</string>
    <string name="confirm">Confirm</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_test">Connection test</string>
    <string name="connection_test_available">Success: HTTPS handshake took %d ms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %d ms</string>
    <string name="connection_test_clear_results">Clear test results</string>
    <string name="connection_test_delete_unavailable">Clear unavailable</string>
    <string name="connection_test_domain_not_found">Domain not found</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="connection_test_refused">Connection refused</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_timeout">Timeout</string>
    <string name="connection_test_unreachable">Unreachable</string>
    <string name="connection_test_url">Connection test URL</string>
    <string name="connection_test_url_test">URL test</string>
    <string name="copy">Copy</string>
    <string name="copy_failed">Failed to copy.</string>
    <string name="copy_label">Copy app name</string>
    <string name="copy_package_name">Copy package name</string>
    <string name="copy_success">Successfully copy!</string>
    <string name="create_rule">Create a rule</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="delete">Remove</string>
    <string name="edit">Edit</string>
    <string name="menu_about">About</string>
    <string name="menu_speed_test">Speed Test</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_log">Logs</string>
    <string name="menu_route">Route</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_traffic">Traffic</string>
    <string name="off">Off</string>
    <string name="probe_cert">Certificate prober</string>
    <string name="probe_cert_summary">Probe the TLS certificate of a server.</string>
    <string name="route_proxy">Proxy</string>
    <string name="server_address">Server</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="start">Start</string>
    <string name="stun_test">NAT behavior discovery</string>
    <string name="stun_test_summary">"Discover client's NAT mapping behavior and NAT filtering behavior defined in RFC 5780 using STUN."</string>
    <string name="traffic">%1$s↑ %2$s↓</string>
</resources>