<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_action_description"
            android:id="@id/nav_configuration"
            android:title="@string/menu_configuration" />
        <item
            android:icon="@drawable/ic_baseline_view_list_24"
            android:id="@id/nav_group"
            android:title="@string/menu_group" />
        <item
            android:icon="@drawable/ic_maps_directions"
            android:id="@id/nav_route"
            android:title="@string/menu_route" />
        <item
            android:icon="@drawable/ic_action_settings"
            android:id="@id/nav_settings"
            android:title="@string/settings" />
    </group>
    <group
        android:id="@id/misc"
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_bug_report_24"
            android:id="@id/nav_logcat"
            android:title="@string/menu_log" />
        <item
            android:icon="@drawable/ic_baseline_transform_24"
            android:id="@id/nav_traffic"
            android:title="@string/menu_traffic" />
        <item
            android:icon="@drawable/baseline_construction_24"
            android:id="@id/nav_tools"
            android:title="@string/menu_tools" />
    </group>
    <group
        android:id="@id/about"
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_speed_24"
            android:id="@id/nav_speed_test"
            android:title="@string/menu_speed_test" />
        <item
            android:icon="@drawable/ic_baseline_info_24"
            android:id="@id/nav_about"
            android:title="@string/menu_about" />
    </group>
</menu>