<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:orientation="vertical"
    android:paddingBottom="64.0dip"
    android:clipToPadding="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:textAppearance="?textAppearanceSubtitle2"
            android:id="@id/backup_configurations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/backup_groups_and_configurations" />
        <CheckBox
            android:textAppearance="?textAppearanceSubtitle2"
            android:id="@id/backup_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/backup_rules" />
        <CheckBox
            android:textAppearance="?textAppearanceSubtitle2"
            android:id="@id/backup_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/backup_settings" />
        <Button
            android:textColor="?whiteOrTextPrimary"
            android:id="@id/action_export"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_export"
            style="@style/Widget.AppCompat.Button.Colored" />
        <Button
            android:textColor="?whiteOrTextPrimary"
            android:id="@id/action_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            style="@style/Widget.AppCompat.Button.Colored" />
        <TextView
            android:textColor="?android:textColorTertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip"
            android:text="@string/backup_summary" />
        <Button
            android:textColor="?whiteOrTextPrimary"
            android:id="@id/action_import_file"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip"
            android:text="@string/action_import_file"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>