<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="16.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBox
        android:textAppearance="?textAppearanceSubtitle2"
        android:id="@id/backup_configurations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/backup_groups_and_configurations" />
    <CheckBox
        android:textAppearance="?textAppearanceSubtitle2"
        android:id="@id/backup_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/backup_rules" />
    <CheckBox
        android:textAppearance="?textAppearanceSubtitle2"
        android:id="@id/backup_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/backup_settings" />
    <TextView
        android:textColor="@color/material_red_accent_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:text="@string/backup_import_summary" />
</LinearLayout>