<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_action_delete"
        android:id="@id/action_delete"
        android:title="@string/delete"
        android:alphabeticShortcut="d"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_action_done"
        android:id="@id/action_apply"
        android:title="@string/apply"
        android:alphabeticShortcut="s"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_action_done"
        android:id="@id/action_create_shortcut"
        android:visible="false"
        android:title="@string/create_shortcut"
        android:alphabeticShortcut="q"
        app:showAsAction="never" />
</menu>