<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_appbar" />
    <com.google.android.material.chip.ChipGroup
        android:id="@id/bypassGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="4.0dip"
        android:paddingEnd="4.0dip"
        app:selectionRequired="true"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@id/appProxyModeDisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off" />
        <com.google.android.material.chip.Chip
            android:id="@id/appProxyModeOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_proxy" />
        <com.google.android.material.chip.Chip
            android:id="@id/appProxyModeBypass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bypass_apps" />
    </com.google.android.material.chip.ChipGroup>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@id/loading"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </LinearLayout>
    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
        android:scrollbarSize="0.0dip"
        android:id="@id/list"
        android:visibility="gone"
        android:clipToPadding="false"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:fastScrollAutoHide="true"
        app:fastScrollPopupTextColor="?colorPrimary"
        app:fastScrollThumbColor="?colorPrimary"
        app:fastScrollThumbInactiveColor="?colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</LinearLayout>