<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:orientation="vertical"
    android:paddingBottom="64.0dip"
    android:clipToPadding="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:focusable="true"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.0dip"
            app:cardElevation="2.0dip">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="?textAppearanceHeadline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stun_test" />
                    <TextView
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="?android:textColorSecondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16.0dip"
                        android:text="@string/stun_test_summary" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dip">
                    <Button
                        android:textColor="?primaryOrTextPrimary"
                        android:id="@id/stunTest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:layout_marginEnd="8.0dip"
                        style="@style/Widget.AppCompat.Button.Borderless" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:focusable="true"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.0dip"
            app:cardElevation="2.0dip">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="?textAppearanceHeadline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/probe_cert" />
                    <TextView
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="?android:textColorSecondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16.0dip"
                        android:text="@string/probe_cert_summary" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dip">
                    <Button
                        android:textColor="?primaryOrTextPrimary"
                        android:id="@id/probeCertificate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:layout_marginEnd="8.0dip"
                        style="@style/Widget.AppCompat.Button.Borderless" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>