<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@id/content"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4.0dip"
    app:cardElevation="2.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/content_lin"
        android:focusable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@id/selected_view"
            android:background="?selectedColorPrimary"
            android:visibility="invisible"
            android:layout_width="4.0dip"
            android:layout_height="fill_parent" />
        <LinearLayout
            android:orientation="vertical"
            android:nextFocusRight="@id/edit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@id/container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="12.0dip"
                    android:paddingTop="8.0dip"
                    android:paddingBottom="8.0dip"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">
                    <TextView
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textStyle="bold"
                        android:textColor="?android:textColorPrimary"
                        android:id="@id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_gravity="top"
                    android:id="@id/edit"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="12.0dip"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edit"
                    app:srcCompat="@drawable/ic_image_edit" />
                <LinearLayout
                    android:layout_gravity="top"
                    android:id="@id/share"
                    android:background="?selectableItemBackgroundBorderless"
                    android:focusable="true"
                    android:nextFocusLeft="@id/container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/share">
                    <LinearLayout
                        android:id="@id/share_layer"
                        android:padding="12.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@id/shareIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_social_share" />
                    </LinearLayout>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_gravity="top"
                    android:id="@id/deleteIcon"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="12.0dip"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/delete"
                    app:srcCompat="@drawable/ic_action_delete" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingBottom="4.0dip"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12.0dip"
                android:paddingEnd="8.0dip">
                <TextView
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="?android:textColorSecondary"
                    android:id="@id/profile_address"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/server_address"
                    android:layout_weight="1.0" />
                <TextView
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="?android:textColorSecondary"
                    android:id="@id/traffic_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/traffic"
                    android:layout_marginStart="8.0dip" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingBottom="12.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12.0dip"
                android:paddingEnd="8.0dip">
                <TextView
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="?colorAccent"
                    android:id="@id/profile_type"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
                <TextView
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="?colorAccent"
                    android:id="@id/profile_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8.0dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>